cleaned main ipynb a bit

--- a/input-focused/main.ipynb
+++ b/input-focused/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -29,33 +29,33 @@
       "  warnings.warn('More than 1 compartments found in the Subsystem model. Check resulting models for consistency.')\n",
       "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\System.py:227: UserWarning: Subsystem SBML model is not the latest. Converting to latest SBML level and version\n",
       "  warnings.warn('Subsystem SBML model is not the latest. Converting to latest SBML level and version')\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:613: UserWarning: Not all of the Subsystems being combined are in the same Compartment\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:611: UserWarning: Not all of the Subsystems being combined are in the same Compartment\n",
       "  warnings.warn('Not all of the Subsystems being combined are in the same Compartment')\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1426: UserWarning: UnitDefinition with id per_second does not have name attribute set. To avoid duplicates, use name argument.\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1424: UserWarning: UnitDefinition with id per_second does not have name attribute set. To avoid duplicates, use name argument.\n",
       "  warnings.warn('UnitDefinition with id {0} does not have name attribute set. To avoid duplicates, use name argument.'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1426: UserWarning: UnitDefinition with id substance does not have name attribute set. To avoid duplicates, use name argument.\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1424: UserWarning: UnitDefinition with id substance does not have name attribute set. To avoid duplicates, use name argument.\n",
       "  warnings.warn('UnitDefinition with id {0} does not have name attribute set. To avoid duplicates, use name argument.'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1456: UserWarning: UnitDefinition with identifier per_second does not have a name argument. To avoid duplication, use name argument\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1454: UserWarning: UnitDefinition with identifier per_second does not have a name argument. To avoid duplication, use name argument\n",
       "  warnings.warn('UnitDefinition with identifier {0} does not have a name argument. To avoid duplication, use name argument'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1456: UserWarning: UnitDefinition with identifier substance does not have a name argument. To avoid duplication, use name argument\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1454: UserWarning: UnitDefinition with identifier substance does not have a name argument. To avoid duplication, use name argument\n",
       "  warnings.warn('UnitDefinition with identifier {0} does not have a name argument. To avoid duplication, use name argument'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1426: UserWarning: UnitDefinition with id volume does not have name attribute set. To avoid duplicates, use name argument.\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1424: UserWarning: UnitDefinition with id volume does not have name attribute set. To avoid duplicates, use name argument.\n",
       "  warnings.warn('UnitDefinition with id {0} does not have name attribute set. To avoid duplicates, use name argument.'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1426: UserWarning: UnitDefinition with id area does not have name attribute set. To avoid duplicates, use name argument.\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1424: UserWarning: UnitDefinition with id area does not have name attribute set. To avoid duplicates, use name argument.\n",
       "  warnings.warn('UnitDefinition with id {0} does not have name attribute set. To avoid duplicates, use name argument.'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1498: UserWarning: Event with id mw747f5e25_3ef2_486f_bbbf_76ebdd78ee16 does not have name attribute set. To avoid duplicates, use name argument.\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1496: UserWarning: Event with id mw747f5e25_3ef2_486f_bbbf_76ebdd78ee16 does not have name attribute set. To avoid duplicates, use name argument.\n",
       "  warnings.warn('Event with id {0} does not have name attribute set. To avoid duplicates, use name argument.'.format(event.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1498: UserWarning: Event with id mw3e3e16a0_acaf_46f8_a626_4588bd2fb6ff does not have name attribute set. To avoid duplicates, use name argument.\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1496: UserWarning: Event with id mw3e3e16a0_acaf_46f8_a626_4588bd2fb6ff does not have name attribute set. To avoid duplicates, use name argument.\n",
       "  warnings.warn('Event with id {0} does not have name attribute set. To avoid duplicates, use name argument.'.format(event.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1095: UserWarning: Removing duplicate species IPTG_2_combined in the same compartment\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1093: UserWarning: Removing duplicate species IPTG_2_combined in the same compartment\n",
       "  warnings.warn('Removing duplicate species {0} in the same compartment'.format(newid))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1528: UserWarning: Event with identifier mw747f5e25_3ef2_486f_bbbf_76ebdd78ee16 does not have a name argument. To avoid duplication, use name argument\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1526: UserWarning: Event with identifier mw747f5e25_3ef2_486f_bbbf_76ebdd78ee16 does not have a name argument. To avoid duplication, use name argument\n",
       "  warnings.warn('Event with identifier {0} does not have a name argument. To avoid duplication, use name argument'.format(event.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1528: UserWarning: Event with identifier mw3e3e16a0_acaf_46f8_a626_4588bd2fb6ff does not have a name argument. To avoid duplication, use name argument\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1526: UserWarning: Event with identifier mw3e3e16a0_acaf_46f8_a626_4588bd2fb6ff does not have a name argument. To avoid duplication, use name argument\n",
       "  warnings.warn('Event with identifier {0} does not have a name argument. To avoid duplication, use name argument'.format(event.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1456: UserWarning: UnitDefinition with identifier volume does not have a name argument. To avoid duplication, use name argument\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1454: UserWarning: UnitDefinition with identifier volume does not have a name argument. To avoid duplication, use name argument\n",
       "  warnings.warn('UnitDefinition with identifier {0} does not have a name argument. To avoid duplication, use name argument'.format(unit_definition.getId()))\n",
-      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1456: UserWarning: UnitDefinition with identifier area does not have a name argument. To avoid duplication, use name argument\n",
+      "c:\\users\\apand\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\subsbml-0.1-py3.6.egg\\subsbml\\Subsystem.py:1454: UserWarning: UnitDefinition with identifier area does not have a name argument. To avoid duplication, use name argument\n",
       "  warnings.warn('UnitDefinition with identifier {0} does not have a name argument. To avoid duplication, use name argument'.format(unit_definition.getId()))\n"
      ]
     }
@@ -88,11 +88,18 @@
     "\n",
     "# Get final combined model\n",
     "cell_model, _ = cell.getModel()\n",
-    "libsbml.writeSBML(cell_model, 'final_cell_model.xml')\n",
+    "libsbml.writeSBML(cell_model, 'models/final_cell_model.xml')\n",
     "# Simulate\n",
     "timepoints = np.linspace(0,100,100)\n",
     "# results, _ = Subsystem(cell_model).simulateBioscrape(0, timepoints)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
